<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="android.myapplicationdev.com.demoexplicitintent.HeroStatsActivity">

    <TextView
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/superheroLabel" />

    <TextView
        android:id="@+id/textStrength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strengthLabel" />

    <TextView
        android:id="@+id/textTechnicalProwess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/technical_prowessLabel" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLike"
        android:text="@string/likeBtnLabel"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDislike"
            android:text="@string/DislikeBtnLabel"/>
    </LinearLayout>
</LinearLayout>
